syntax = "proto3";

package Dimitriin.ServiceAssistant.Protocol.Payload;

option go_package = "payload";

message Packet {
    oneof Payload {
        ReadyBit readyBit = 1;
        HealthBit healthBit = 2;
        CounterRegisterCmd counterRegisterCmd = 3;
        CounterIncCmd counterIncCmd = 4;
        CounterAddCmd counterAddCmd = 5;
        HistogramRegisterCmd histogramRegisterCmd = 6;
        HistogramObserveCmd histogramObserveCmd = 7;
        GaugeRegisterCmd gaugeRegisterCmd= 8;
        GaugeIncCmd gaugeIncCmd = 9;
        GaugeDecCmd gaugeDecCmd = 10;
        GaugeSetCmd gaugeSetCmd = 11;
        GaugeAddCmd gaugeAddCmd = 12;
        GaugeSubCmd gaugeSubCmd = 13;
        GaugeSetToCurrentTimeCmd gaugeSetToCurrentTimeCmd= 14;
    }
}

message ReadyBit {
    uint64 ttl = 1;
}

message HealthBit {
    uint64 ttl = 1;
}

message CounterRegisterCmd {
    string name = 1;
    string help = 2;
    repeated string labels = 3;
}

message CounterIncCmd {
    string name = 1;
    map<string, string> labels = 2;
}

message CounterAddCmd {
    string name = 1;
    map<string, string> labels = 2;
    double value = 3;
}

message HistogramRegisterCmd {
    string name = 1;
    string help = 2;
    repeated string labels = 3;
    repeated double buckets = 4;
}

message HistogramObserveCmd {
    string name = 1;
    map<string, string> labels = 2;
    double value = 3;
}

message GaugeRegisterCmd {
    string name = 1;
    string help = 2;
    repeated string labels = 3;
}

message GaugeIncCmd {
    string name = 1;
    map<string, string> labels = 2;
}

message GaugeDecCmd {
    string name = 1;
    map<string, string> labels = 2;
}

message GaugeSetCmd {
    string name = 1;
    map<string, string> labels = 2;
    double value = 3;
}

message GaugeAddCmd {
    string name = 1;
    map<string, string> labels = 2;
    double value = 3;
}

message GaugeSubCmd {
    string name = 1;
    map<string, string> labels = 2;
    double value = 3;
}

message GaugeSetToCurrentTimeCmd {
    string name = 1;
    map<string, string> labels = 2;
}